--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
                     correcta para entender e impactar en su ciclo de compra.
                 </p>
                 <a href="#" class="button2"> Conoce más</a>
-                -->>
+                -->
+                
             </div>
         </div>
         <div class="contenedor">
@@ -167,27 +168,27 @@
                 <div class="iconos">
                     <div class="iconcon">
                         <div class="padre">
-                            <i class="icon fas fa-adjust"></i>
+                            <img src="./img/ic1.png" alt="">
                         </div>
                     </div>
                     <div class="iconcon">
                         <div class="padre">
-                            <i class="icon fas fa-adjust"></i>
+                            <img src="./img/ic2.png" alt="">
                         </div>
                     </div>
                     <div class="iconcon">
                         <div class="padre">
-                            <i class="icon fas fa-adjust"></i>
+                            <img src="./img/ic3.png" alt="">
                         </div>
                     </div>
                     <div class="iconcon">
                         <div class="padre">
-                            <i class="icon fas fa-adjust"></i>
+                            <img src="./img/ic4.png" alt="">
                         </div>
                     </div>
                     <div class="iconcon">
                         <div class="padre">
-                            <i class="icon fas fa-adjust"></i>
+                            <img src="./img/ic5.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -255,7 +256,44 @@
                 </div>
             </div>
         </div>
-
+        <div class="equipo">
+            <h1>Nuestro equipo creativo</h1>
+            <p>La empresa de Realidad Aumentada líder en los países de habla hispana.
+            </p>
+            <div class="flex3">
+                <div class="flexitem3">
+                    <img src="img/ruben-800x600.png" alt="">
+                    <h2>Ruben Márquez</h3>
+                    <p>Motion Graphics y 3D</p>
+                </div>
+                <div class="flexitem3">
+                    <img src="img/ruben-800x600.png" alt="">
+                    <h2>Ruben Márquez</h3>
+                    <p>Motion Graphics y 3D</p>
+                </div>
+                <div class="flexitem3">
+                    <img src="img/ruben-800x600.png" alt="">
+                    <h2>Ruben Márquez</h3>
+                    <p>Motion Graphics y 3D</p>
+                </div>
+                <div class="flexitem3">
+                    <img src="img/ruben-800x600.png" alt="">
+                    <h2>Ruben Márquez</h3>
+                    <p>Motion Graphics y 3D</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <img src="./img/logo2.png" alt="" class="logofooter">
+            <ul class="iconos2"> 
+            <li> <img src="./img/footer/i1.png" alt=""></li>
+            <li><img src="./img/footer/i2.png" alt=""></li>
+            <li><img src="./img/footer/i3.png" alt=""></li>
+            <li><img src="./img/footer/i4.png" alt=""></li>
+            <li><img src="./img/footer/i5.png" alt=""></li></ul>
+          <div class="foot"> © Diseñado con Sueño ♥</div>
+        </div>
+        <!-- 
         <div class="clientes">
             <h2>Clientes que han confiado en Gitloops</h2>
             <ul>
@@ -269,7 +307,7 @@
                 <li></li>
                 <li></li>
             </ul>
-        </div>
+        </div>-->
         <a class="wasap" href="https://chatwith.io/s/6030deb409d8b​">
             <img src="img/wasap.png" alt="" />
         </a>
