--- a/index.html
+++ b/index.html
@@ -285,12 +285,15 @@
         </div>
         <div class="footer">
             <img src="./img/logo2.png" alt="" class="logofooter">
-            <ul class="iconos2"> 
-            <li> <img src="./img/footer/i1.png" alt=""></li>
-            <li><img src="./img/footer/i2.png" alt=""></li>
-            <li><img src="./img/footer/i3.png" alt=""></li>
-            <li><img src="./img/footer/i4.png" alt=""></li>
-            <li><img src="./img/footer/i5.png" alt=""></li></ul>
+            <div class="iconos2">
+                <div class="sep"> <img src="./img/footer/i1.png" alt=""></div>
+                <div class="sep"> <img src="./img/footer/i2.png" alt=""></div>
+                <div class="sep"> <img src="./img/footer/i3.png" alt=""></div>
+                <div class="sep"> <img src="./img/footer/i4.png" alt=""></div>
+                <div class="sep"> <img src="./img/footer/i5.png" alt=""></div>
+              
+
+          </div>
           <div class="foot"> © Diseñado con Sueño ♥</div>
         </div>
         <!-- 
