--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                
                 <div class="left">
                     <h1>Todo listo para empezar a vender</h1>
-                    <p>Diseñamos y posicionamos tu tienda digital. administre su negocio <br>sobre la marcha en cualquier parte del mundo.</p>
+                    <p>Diseñamos y posicionamos tu tienda digital. Administre su negocio <br>sobre la marcha en cualquier parte del mundo.</p>
 
                     <a href=""> <div class="button bounce-left">Saber más!</div></a>
                 </div>
