--- a/team.html
+++ b/team.html
@@ -29,17 +29,19 @@
         <div class="navbar" id="navbar">
             <img src="./img/logo2.png" alt="" />
             <ul class="menu">
-                <li>Demo</li>
-                <li>Blog</li>
-                <li>Contacto</li>
+                <li>Home</li>
+                <li>Templates</li>
+                <li>Price</li>
+                <li>Help</li>
             </ul>
         </div>
         <div class="navbar2" id="navbar2">
             <a href="index.html"><img src="./img/logo2.png" alt="" /></a>
             <ul class="menu">
-                <li>Demo</li>
-                <li>Blog</li>
-                <li>Contacto</li>
+                <li>Home</li>
+                <li>Templates</li>
+                <li>Price</li>
+                <li>Help</li>
             </ul>
         </div>
         <div class="header">
