--- a/index.html
+++ b/index.html
@@ -52,17 +52,19 @@
         <div class="navbar" id="navbar"> 
             <img src="./img/logo2.png" alt="" />
             <ul class="menu">
-                <li>Demo</li>
-                <li>Blog</li>
-                <li>Contacto</li>
+                <li>Home</li>
+                <li>Templates</li>
+                <li>Price</li>
+                <li>Help</li>
             </ul>
         </div>
         <div class="navbar2" id="navbar2"> 
             <img src="./img/logo2.png" alt="" />
             <ul class="menu">
-                <li>Demo</li>
-                <li>Blog</li>
-                <li>Contacto</li>
+                <li>Home</li>
+                <li>Templates</li>
+                <li>Price</li>
+                <li>Help</li>
             </ul>
         </div>
         <div class="wrapper">
@@ -235,14 +237,14 @@
             </p>
             <div class="flex3">
                 <div class="flexitem3">
-                    <img src="img/ruben-800x600.png" alt="">
-                    <h2>Ruben Márquez</h3>
-                    <p>Motion Graphics y 3D</p>
+                    <img src="img/empleado1.jpg" alt="">
+                    <h2>Luis Pesantes</h3>
+                    <p>Diseño</p>
                 </div>
                 <div class="flexitem3">
-                    <img src="img/ruben-800x600.png" alt="">
-                    <h2>Ruben Márquez</h3>
-                    <p>Motion Graphics y 3D</p>
+                    <img src="img/empleado2.jpg" alt="">
+                    <h2>Erwing Medina</h3>
+                    <p>Desarrollador en jefe <br> Ingeniero en Computación<br> Filántropo</p>
                 </div>
                 <div class="flexitem3">
                     <img src="img/ruben-800x600.png" alt="">
