--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <div class="flexitem3">
                     <img src="img/empleado1.jpg" alt="">
                     <h2>Luis Pesantes</h3>
-                    <p>Diseño</p>
+                    <p>Pasante</p>
                 </div>
                 <div class="flexitem3">
                     <img src="img/empleado2.jpg" alt="">
@@ -247,14 +247,14 @@
                     <p>Desarrollador en jefe <br> Ingeniero en Computación<br> Filántropo</p>
                 </div>
                 <div class="flexitem3">
-                    <img src="img/ruben-800x600.png" alt="">
+                    <img src="img/empleado3.png" alt="">
                     <h2>Ruben Márquez</h3>
-                    <p>Motion Graphics y 3D</p>
+                    <p>Desarrollador</p>
                 </div>
                 <div class="flexitem3">
-                    <img src="img/ruben-800x600.png" alt="">
+                    <img src="img/empleado4.png" alt="">
                     <h2>Ruben Márquez</h3>
-                    <p>Motion Graphics y 3D</p>
+                    <p>Diseñador</p>
                 </div>
             </div>
         </div>
