--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Incidunt vitae ipsam porro libero ducimus nostrum facere si
                     milique. Aut repellat culpa fugiat ad quae magni aspernatur?</p>
-                <span class="linkk"><a href="./team.html">Experienced team</a></span>
+                    <a href="team.html"> <div class="button3">Saber más</div></a>
             </div>
         </div>
         <div class="flexpar">
@@ -119,7 +119,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Incidunt vitae ipsam porro libero ducimus nostrum facere si
                     milique. Aut repellat culpa fugiat ad quae magni aspernatur?</p>
-                <span class="linkk"><a href="./team.html">Experienced team</a></span>
+                    <a href="team.html"> <div class="button3">Saber más</div></a>
             </div>
             <div class="fleximg"><img src="img/Player.png" alt=""></div>
         </div>
@@ -130,7 +130,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Incidunt vitae ipsam porro libero ducimus nostrum facere si
                     milique. Aut repellat culpa fugiat ad quae magni aspernatur?</p>
-                <span class="linkk"><a href="./team.html">Experienced team</a></span>
+                <a href="team.html"> <div class="button3">Saber más</div></a>
             </div>
         </div>
 
