--- a/team.html
+++ b/team.html
@@ -59,11 +59,13 @@
         <div class="flexpar">
             <div class="fleximg"><img src="img/Player.png" alt="" /></div>
             <div class="flextext">
-                <h1>The best design for your studio website</h1>
+                <h1>DISEÑO DE WEB</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Incidunt vitae ipsam porro libero ducimus nostrum facere si
-                    milique. Aut repellat culpa fugiat ad quae magni aspernatur?
+                    Impulsamos la presencia de tu marca en la web, mejora y
+                    aumenta tus ventas <br />Combinamos diseño de interfaz,
+                    experiencia de usuario y optimización SEO para crear sitios
+                    web que posicionen a las marcas como la mejor opción en su
+                    área.
                 </p>
                 <span class="linkk"
                     ><a href="./team.html">Experienced team</a></span
@@ -72,11 +74,12 @@
         </div>
         <div class="flexpar">
             <div class="flextext">
-                <h1>The best design for your studio website</h1>
+                <h1>E-COMMERCE</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Incidunt vitae ipsam porro libero ducimus nostrum facere si
-                    milique. Aut repellat culpa fugiat ad quae magni aspernatur?
+                    Todo lo que necesita para comenzar a vender en línea,
+                    Obtenga pagos seguros, opciones de envío configurables y
+                    más, listo para usar. Cualquier producto se puede vender en
+                    e-commerce.
                 </p>
                 <span class="linkk"
                     ><a href="./team.html">Experienced team</a></span
