mucho pendiente burger

--- a/team.html
+++ b/team.html
@@ -87,5 +87,6 @@
             </div>
             <div class="fleximg"><img src="img/Player.png" alt="" /></div>
         </div>
+        <script src="js/burger.js"></script>
     </body>
 </html>
