--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
                 </p>
                     <a href="team.html"> <div class="button3">Saber más</div></a>
             </div>
-            <div class="fleximg"><img src="img/Player.png" alt=""></div>
+            <div class="fleximg"><img id="que1" src="img/que1.png" alt=""></div>
         </div>
         <div class="flexpar">
-            <div class="fleximg"><img src="img/Player.png" alt=""></div>
+            <div class="fleximg"><img src="img/que3.png" alt=""></div>
             <div class="flextext"> 
                 <h1>DISEÑO DE WEB</h1>
                 <p>
@@ -138,7 +138,7 @@
             <div class="fleximg"><img src="img/Player.png" alt=""></div>
         </div>
         <div class="flexpar">
-            <div class="fleximg"><img src="img/Player.png" alt=""></div>
+            <div class="fleximg"><img src="img/que2.png" alt=""></div>
             <div class="flextext"> 
                 <h1>SEO </h1>
                 <p>Optimización de motores <br>Posiciona tu sitio web como la mejor opción de su área</p>
