--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </p>
                     <a href="team.html"> <div class="button3">Saber más</div></a>
             </div>
-            <div class="fleximg"><img src="img/Player.png" alt=""></div>
+            <div class="fleximg"><img id ="eco" src="img/que4.jpg" alt=""></div>
         </div>
         <div class="flexpar">
             <div class="fleximg"><img src="img/que2.png" alt=""></div>
