--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
             integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
             crossorigin="anonymous"
         />
+        <!-- Facebook Pixel Code -->
+        <script>
+            !function(f,b,e,v,n,t,s)
+            {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+            n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+            if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+            n.queue=[];t=b.createElement(e);t.async=!0;
+            t.src=v;s=b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t,s)}(window, document,'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+            fbq('init', '500226434662023');
+            fbq('track', 'PageView');
+            </script>
+            <noscript><img height="1" width="1" style="display:none"
+            src="https://www.facebook.com/tr?id=500226434662023&ev=PageView&noscript=1"
+            /></noscript>
+            <!-- End Facebook Pixel Code -->
+    <!-- End Facebook Pixel Code -->
         <!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
 
         <title>Gitloops</title>
@@ -102,7 +120,7 @@
             
         </div>
         <div class="flexpar">
-            <div class="flextext"> 
+            <div class="flextext" data-aos="fade-right"> 
                 <h1>App Development</h1>
                 
                 <p>
@@ -112,11 +130,11 @@
                 </p>
                     <a href="team.html"> <div class="button3">Saber más</div></a>
             </div>
-            <div class="fleximg"><img id="que1" src="img/que1.png" alt=""></div>
+            <div class="fleximg" id="que1"><img  src="img/que1.png" alt=""></div>
         </div>
         <div class="flexpar">
             <div class="fleximg"><img src="img/que3.png" alt=""></div>
-            <div class="flextext"> 
+            <div class="flextext" data-aos="fade-left"> 
                 <h1>DISEÑO DE WEB</h1>
                 <p>
                     Impulsamos la presencia de tu marca en la web, mejora y
@@ -126,7 +144,7 @@
             </div>
         </div>
         <div class="flexpar">
-            <div class="flextext"> 
+            <div class="flextext" data-aos="fade-right"> 
                 <h1>E-COMMERCE</h1>
                 <p>
                     Todo lo que necesita para comenzar a vender en línea,
@@ -139,7 +157,7 @@
         </div>
         <div class="flexpar">
             <div class="fleximg"><img src="img/que2.png" alt=""></div>
-            <div class="flextext"> 
+            <div class="flextext" data-aos="fade-left"> 
                 <h1>SEO </h1>
                 <p>Optimización de motores <br>Posiciona tu sitio web como la mejor opción de su área</p>
                 <a href="team.html"> <div class="button3">Saber más</div></a>
@@ -369,7 +387,7 @@
           <script src="js/hidenav.js"></script>
           <script src="js/burger.js"></script>
           <!--Start of Tawk.to Script-->
-<!-- Messenger Chat Plugin Code -->
+<!-- Messenger plugin de chat Code -->
 <div id="fb-root"></div>
 <script>
   window.fbAsyncInit = function() {
@@ -383,15 +401,15 @@
     var js, fjs = d.getElementsByTagName(s)[0];
     if (d.getElementById(id)) return;
     js = d.createElement(s); js.id = id;
-    js.src = 'https://connect.facebook.net/es_ES/sdk/xfbml.customerchat.js';
+    js.src = 'https://connect.facebook.net/es_LA/sdk/xfbml.customerchat.js';
     fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));
 </script>
 
-<!-- Your Chat Plugin code -->
+<!-- Your plugin de chat code -->
 <div class="fb-customerchat"
-  attribution="page_inbox"
-  page_id="1794491690764365">
+  attribution="biz_inbox"
+  page_id="102962145174415">
 </div>
     <!--End of Tawk.to Script-->
     </body>
