--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     Obtenga pagos seguros, opciones de envío configurables y
                     más.
                 </p>
-                    <a href="team.html"> <div class="button3">Saber más</div></a>
+                    <a href="aplicaciones.html"> <div class="button3">Saber más</div></a>
             </div>
             <div class="fleximg" id="que1"><img  src="img/que1.png" alt=""></div>
         </div>
@@ -140,7 +140,7 @@
                     Impulsamos la presencia de tu marca en la web, mejora y
                     aumenta tus ventas 
                 </p>
-                    <a href="team.html"> <div class="button3">Saber más</div></a>
+                    <a href="web.html"> <div class="button3">Saber más</div></a>
             </div>
         </div>
         <div class="flexpar">
@@ -151,7 +151,7 @@
                     Obtenga pagos seguros, opciones de envío configurables y
                     más.
                 </p>
-                    <a href="team.html"> <div class="button3">Saber más</div></a>
+                    <a href="ecommerce.html"> <div class="button3">Saber más</div></a>
             </div>
             <div class="fleximg"><img id ="eco" src="img/que4.jpg" alt=""></div>
         </div>
@@ -160,7 +160,7 @@
             <div class="flextext" data-aos="fade-left"> 
                 <h1>SEO </h1>
                 <p>Optimización de motores <br>Posiciona tu sitio web como la mejor opción de su área</p>
-                <a href="team.html"> <div class="button3">Saber más</div></a>
+                <a href="seo.html"> <div class="button3">Saber más</div></a>
             </div>
         </div>
 
