--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@
                 </div>
                 <div class="contacto">
                     <h1>Sign up for a free acount</h1>
-                    <form action="">
+                    <form action="js/contactform.php">
                         <input type="text" placeholder="  Nombre" id="firstname" name="firstname">
                         <input type="text" placeholder="  Apellido" id="lastname" name="lastname"><br>
                         <input type="text" placeholder="  Correo" id="email" name="email">
-                        <button type="submit" class="button4">Register</button>
+                        <button type="submit" name="submit" class="button4">Register</button>
 
                     </form>
                 </div>
