--- a/aplicaciones.html
+++ b/aplicaciones.html
@@ -8,7 +8,7 @@
         <meta property="og:url" content="http://gitloops.com/" />
         <meta
             property="og:description"
-            content="Página de Desarrollo una locura"
+            content="Transicionamos un negocio al mercado digital."
         />
         <meta property="og:image" content="https://i.imgur.com/4wmXGem.jpg" />
         <link rel="shortcut icon" href="img/icono.ico" type="image/x-icon" />
