--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <h1>Todo listo para empezar a vender</h1>
                     <p>Diseñamos y posicionamos tu tienda digital. Administre su negocio <br>sobre la marcha en cualquier parte del mundo.</p>
 
-                    <a href=""> <div class="button ">Saber más!</div></a>
+                    <a href="#ecommerce"> <div class="button ">Saber más!</div></a>
                 </div>
             </div>
 
@@ -121,7 +121,7 @@
         </div>
         <div class="flexpar">
             <div class="flextext" data-aos="fade-right"> 
-                <h1>App Development</h1>
+                <h1>APP MÓVIL</h1>
                 
                 <p>
                     Todo lo que necesita para comenzar a vender en línea,
@@ -135,7 +135,7 @@
         <div class="flexpar">
             <div class="fleximg"><img src="img/que3.png" alt=""></div>
             <div class="flextext" data-aos="fade-left"> 
-                <h1>DISEÑO DE WEB</h1>
+                <h1>DISEÑO WEB</h1>
                 <p>
                     Impulsamos la presencia de tu marca en la web, mejora y
                     aumenta tus ventas 
@@ -143,7 +143,7 @@
                     <a href="web.html"> <div class="button3">Saber más</div></a>
             </div>
         </div>
-        <div class="flexpar">
+        <div class="flexpar" id="ecommerce">
             <div class="flextext" data-aos="fade-right"> 
                 <h1>E-COMMERCE</h1>
                 <p>
@@ -269,21 +269,21 @@
                 <div class="flexitem3">
                     <img src="img/empleado1.jpg" alt="">
                     <h2>Luis Pesantes</h3>
-                    <p>Pasante</p>
+                    <p>CEO</p>
                 </div>
                 <div class="flexitem3">
                     <img src="img/empleado2.jpg" alt="">
                     <h2>Erwing Medina</h3>
-                    <p>Desarrollador en jefe <br> Ingeniero en Computación<br> Filántropo</p>
+                    <p>Desarrollador
                 </div>
                 <div class="flexitem3">
                     <img src="img/empleado3.png" alt="">
-                    <h2>Ruben Márquez</h3>
+                    <h2>Axel Orellana</h3>
                     <p>Desarrollador</p>
                 </div>
                 <div class="flexitem3">
                     <img src="img/empleado4.png" alt="">
-                    <h2>Ruben Márquez</h3>
+                    <h2>Rebeca Pesantes</h3>
                     <p>Diseñador</p>
                 </div>
             </div>
