--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             property="og:description"
             content="Transicionamos un negocio al mercado digital."
         />
-        <meta property="og:image" content="https://imgur.com/xOqPzYh" />
+        <meta property="og:image" content="https://i.imgur.com/xOqPzYh.jpeg" />
         <link rel="shortcut icon" href="img/icono.ico" type="image/x-icon" />
         <link rel="icon" href="img/icono.ico" type="image/x-icon" />
         <link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -86,15 +86,17 @@
             <div class="column">
                
                 <div class="left">
-                    <h1>Todo listo para empezar a vender</h1>
-                    <p>Diseñamos y posicionamos tu tienda digital. Administre su negocio <br>sobre la marcha en cualquier parte del mundo.</p>
-
-                    <a href="#ecommerce"> <div class="button ">Saber más!</div></a>
+                    <h1>Desarrollamos tu <br> </h1>
+                    <h1 ><span>ecommerce</span></h1>
+                    <p>A un paso de vender en linea</p>
+                    <a href="#ecommerce"> <div class="button ">ORDER NOW</div></a>
                 </div>
             </div>
 
             <div id="banner">
-                <img src="img/land2.png" alt="" />
+                <img id="movil" src="img/banner1.jpg" alt="" />
+                
+                <img src="img/banner2.jpg" alt="" />
             </div>
         </div>
 
