--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
                     <h1>Desarrollamos tu <br> </h1>
                     <h1 ><span>ecommerce</span></h1>
                     <p>A un paso de vender en linea</p>
-                    <a href="#ecommerce"> <div class="button ">ORDER NOW</div></a>
+                    <a href="#ecommerce"> <div class="button ">Saber más!</div></a>
                 </div>
             </div>
 
             <div id="banner">
                 <img id="movil" src="img/banner1.jpg" alt="" />
                 
-                <img src="img/banner2.jpg" alt="" />
+                <img id="base" src="img/banner2.jpg" alt="" />
             </div>
         </div>
 
